# NLP-Projects-Notebooks

./: .gitignore  pyproject.toml
asr/: iitm_asr.ipynb
src/nlp_projects_notebooks/: __init__.py
testing/: en_TTS.ipynb  en_hi_translation.ipynb  hi_to_audio.ipynb  meloTTS.ipynb
testing/inputs/: meluha_text_hi.txt
voice_cloning_project_samples/text_inputs_for_voice/: meluha_text_en.txt
