[project]
name = "nlp-projects-notebooks"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Aravindh Nivas Marimuthu", email = "aravindhnivas28@gmail.com" },
]
dependencies = [
    "tts>=0.22.0",
    "pydub>=0.25.1",
    "ipykernel>=6.29.5",
]
readme = "README.md"
requires-python = ">=3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nlp_projects_notebooks"]
